Archive2/c1/20d2351462134e/output
main.cpp:7:2: error: expected ';' after struct
}
 ^
 ;
1 error generated.
