Archive2/c1/20d2351462134e/main.cpp
#include <mutex>
struct A
{
    
    int j;
    operator int(){return j;}
}